[package]
name = "rust-basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.3.0", features = ["tokio-postgres"] }

[profile.release]
opt-level = "s"   # optimize for size in release builds# wasm-bindgen = "0.2.92"
lto = true
strip = true
codegen-units = 1
